--- a/mvxport.css
+++ b/mvxport.css
@@ -2,23 +2,25 @@ body {
     background-color: black;
     display: flex;
     flex-direction: column;
-    align-items: center; /* This will center your h1 element */
+    align-items: center;
 }
 
 h1 {
-    color: #27e9ff;
+    color: #23def7;
     font-family: 'Bebas Neue', sans-serif;
     font-family: 'KoHo', sans-serif;
 }
 .token-identifier {
-    color: #27e9ff;
+    color: #23def7;
     font-family: 'Bebas Neue', sans-serif;
     font-family: 'KoHo', sans-serif;
+    font-size: 1.2em;
 }
 .balance {
-    color: #27e9ff;
+    color: #f723d7;
     font-family: 'Bebas Neue', sans-serif;
     font-family: 'KoHo', sans-serif;
+    font-size: 1.2em;
 }
 .result {
     color: #FFFFFF;
@@ -28,14 +30,14 @@ h1 {
 #result {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between; /* This will create a two-column layout for your list */
-    max-width: 600px; /* You can adjust this value as needed */
+    justify-content: space-between;
+    max-width: 600px;
 }
 #result p {
-    width: 45%; /* You can adjust this value as needed */
+    width: 45%;
     box-sizing: border-box;
 }
-/* Responsive styling */
+
 @media only screen and (max-width: 600px) {
     body {
         font-size: 18px;
@@ -44,6 +46,40 @@ h1 {
         font-size: 24px;
     }
     #result p {
-        width: 100%; /* On small screens, the list items will stack vertically */
+        width: 100%;
     }
+}
+
+#searchForm {
+    margin: 20px 0;
+    font-family: 'Bebas Neue', sans-serif;
+    font-family: 'KoHo', sans-serif;
+}
+#addressInput {
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    width: 300px;
+    box-sizing: border-box;
+    font-family: 'Bebas Neue', sans-serif;
+    font-family: 'KoHo', sans-serif;
+}
+#searchForm button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    background-color: #23def7;
+    color: white;
+    cursor: pointer;
+    margin-left: 10px;
+    font-family: 'Bebas Neue', sans-serif;
+    font-family: 'KoHo', sans-serif;
+}
+#searchForm button:hover {
+    background-color: #23def7;
+    box-shadow: 0 0 10px rgba(255, 105, 180, 0.5);
+    font-family: 'Bebas Neue', sans-serif;
+    font-family: 'KoHo', sans-serif;
 }
