--- a/mvxport.css
+++ b/mvxport.css
@@ -83,3 +83,10 @@ h1 {
     font-family: 'Bebas Neue', sans-serif;
     font-family: 'KoHo', sans-serif;
 }
+#welcomeMessage {
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    font-weight: bold;
+    font-family: 'Bebas Neue', sans-serif;
+    font-family: 'KoHo', sans-serif;
+}
