--- a/mvxport.css
+++ b/mvxport.css
@@ -111,3 +111,10 @@ button:active {
 p {
     animation: fadeIn 2s;
 }
+
+.esdt-result {
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+    background-color: #1f1f1f;
+}
