--- a/mvxport.css
+++ b/mvxport.css
@@ -6,6 +6,10 @@ body {
     min-height: 100vh;
     margin: 0;
     width: 100%;
+    background-image: url(WallpaperDog-20546769.jpg);
+    background-repeat: repeat;
+    background-size: cover;
+    background-attachment: fixed; 
 }
 
 h1 {
@@ -117,4 +121,9 @@ p {
     margin: 10px 0;
     border-radius: 5px;
     background-color: #1f1f1f;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: baseline;
+    flex-direction: row;
 }
